Name:                   cab
Version:                0.1.10
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A maintenance command of Haskell cabal packages
Description:            This is a MacPorts-like maintenance command of
   Haskell cabal packages. Some part of this program is a wrapper to
   "ghc-pkg" and "cabal".
   If you are always confused due to inconsistency of two commands,
   or if you want a way to check all outdated packages,
   or if you want a way to remove outdated packages recursively,
   this command helps you.
Homepage:               http://www.mew.org/~kazu/proj/cab/
Category:               Distribution
Cabal-Version:          >= 1.6
Build-Type:             Simple

Executable cab
  Main-Is:              Main.hs
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal
                      , attoparsec >= 0.10.0.0
                      , attoparsec-conduit
                      , bytestring
                      , conduit
                      , containers
                      , directory
                      , filepath
                      , process
                      , process-conduit >= 0.0.0.3
  if os(windows)
     Build-Depends:
  else
     Build-Depends:     unix
  Other-Modules:	CmdDB
                        Commands
                        Env
                        GenPaths
                        PkgDB
                        Program
                        Types
                        Utils
                        VerDB
                        Paths_cab
Source-Repository head
  Type:                 git
  Location:             git clone git://github.com/kazu-yamamoto/cab.git
