cabal-version: >=1.10
name:          cab
version:       0.2.22
license:       BSD3
license-file:  LICENSE
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Kazu Yamamoto <kazu@iij.ad.jp>
homepage:      http://www.mew.org/~kazu/proj/cab/
synopsis:      A maintenance command of Haskell cabal packages
description:
    This is a MacPorts-like maintenance command of
    Haskell cabal packages. Some part of this program is a wrapper to
    "ghc-pkg" and "cabal".
    If you are always confused due to inconsistency of two commands,
    or if you want a way to check all outdated packages,
    or if you want a way to remove outdated packages recursively,
    this command helps you.

category:      Distribution
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/kazu-yamamoto/cab.git

library
    exposed-modules:
        Distribution.Cab
        Distribution.Cab.PkgDB
        Distribution.Cab.Printer
        Distribution.Cab.Sandbox
        Distribution.Cab.VerDB
        Distribution.Cab.Version

    other-modules:
        Distribution.Cab.Commands
        Distribution.Cab.GenPaths
        Distribution.Cab.Utils

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.0 && <5,
        Cabal >=1.18,
        attoparsec >=0.10,
        bytestring,
        conduit >=1.1,
        conduit-extra >=1.1.2,
        containers,
        directory,
        filepath,
        process,
        resourcet

executable cab
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Commands
        Doc
        Help
        Options
        Program
        Run
        Types
        Paths_cab

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base >=4.0 && <5,
        cab,
        Cabal >=1.18,
        attoparsec >=0.10,
        bytestring,
        conduit >=1.1,
        conduit-extra >=1.1.2,
        containers,
        directory,
        filepath,
        process
